methods.picture.PictureMono3.scala.error
Compilation error:
PictureMono3:35: error: value right is not a member of Unit
possible cause: maybe a semicolon is missing before `value right'?
  } right() ; forward(42) ; left()
    ^